Initial commit: added Students, Subjects, Teachers, Courses API
